--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,11 @@ node_js:
 - 7
 install: npm install
 script: npm run build
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  on: 
+    branch: master
+  local_dir: dist
+  target_branch: gh-pages
