--- a/package.json
+++ b/package.json
@@ -24,8 +24,16 @@
     "mocha": "^3.2.0"
   },
   "dependencies": {
+    "command-line-args": "^4.0.2",
+    "command-line-usage": "^4.0.0",
+    "handlebars": "~4.0.4",
     "jsonld": "^0.4.11",
+    "mapping-hub-elements": "https://github.com/mappinghub/elements.git",
+    "mkdirp": "^0.5.1",
+    "promise": "^7.0.4",
+    "request": "^2.79.0",
+    "rimraf": "^2.6.1",
     "underscore": "~1.8.3",
-    "mapping-hub-elements": "https://github.com/mappinghub/elements.git"
+    "walk": "^2.3.9"
   }
 }
