changing to master branch of other repo for deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ deploy:
   on:
     branch: master
   local_dir: dist
-  target_branch: gh-pages
+  target_branch: master
+  repo: mappinghub.github.io
