--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ deploy:
   github_token: $GITHUB_TOKEN
   on:
     branch: master
-  local_dir: dist
+  local_dir: site
   target_branch: master
   repo: mappinghub/mappinghub.github.io
