--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-jsoncombine": "^1.0.3",
+    "gulp-replace": "^0.5.4",
     "mocha": "^3.2.0"
   },
   "dependencies": {
