--- a/site/package.json
+++ b/site/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mappinghub.github.io",
-  "version": "0.0.1",
+  "version": "0.1.$BUILDNUMBER",
   "description": "Public Site for Mapping Hub",
   "repository": {
     "type": "git",
