--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: node_js
 node_js:
 - 4
 install: npm install
-script: npm run build
+script: 
+  npm run build
+  npm run test
 deploy:
   provider: pages
   skip_cleanup: true
