--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
 - 4
 install: npm install
 script: 
-  npm run build
-  npm run test
+- npm run build
+- npm run test
 deploy:
   provider: pages
   skip_cleanup: true
